--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html>
 
-  <head><!-- where all the meta data will go, like and files we need to include -->
-    <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
-  </head>
+<head>
+  <title>My Little Rainbow</title>
+  <link rel="stylesheet" type="text/css" href="./main.css" />
+</head>
 
-  <body><!-- the body element is where everything we will see on the page will go -->
+<body><!-- the body element is where everything we will see on the page will go -->
 
-    <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div></div> <!-- the grandest child div -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <!-- our soon to be beautiful rainbow! -->
+  <div> <!-- the grandest grandparent div -->
+      <div id="red"></div> <!-- contains a <div> tag with an id of "red" -->
+        <div id="orange"></div> <!-- contains a <div> tag with an id of "orange" -->
+          <div id="yellow"></div> <!-- contains a <div> tag with an id of "yellow" -->
+          <div id="green"></div> <!-- contains a <div> tag with an id of "green" -->
+        <div id="blue"></div> <!-- contains a <div> tag with an id of "blue" -->
+      <div id="indigo"></div> <!-- contains a <div> tag with an id of "indigo" -->
+    <div id="violet"></div> <!-- contains a <div> tag with an id of "violet" -->
+  </div>
 
   </body>
 
